--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ colorutils = "*"
 colors-py = "*"
 click = "*"
 termcolor = "*"
+matplotlib = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.7"
